完成噪音传感器和PM2.5传感器驱动

--- a/物联网环境控制系统.uvprojx
+++ b/物联网环境控制系统.uvprojx
@@ -745,6 +745,16 @@
               <FileType>5</FileType>
               <FilePath>.\Hardware\delay.h</FilePath>
             </File>
+            <File>
+              <FileName>PM25.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\PM25.c</FilePath>
+            </File>
+            <File>
+              <FileName>PM25.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\PM25.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
