完成屏幕界面

--- a/物联网环境控制系统.uvprojx
+++ b/物联网环境控制系统.uvprojx
@@ -755,6 +755,16 @@
               <FileType>5</FileType>
               <FilePath>.\Hardware\PM25.h</FilePath>
             </File>
+            <File>
+              <FileName>LY69.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\LY69.c</FilePath>
+            </File>
+            <File>
+              <FileName>LY69.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\LY69.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
